--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "nodemon src/index.ts"
+    "start:dev": "nodemon src/index.ts",
+    "start": "node lib/index.js"
   },
   "keywords": [
     "ondc",
